Make some linters optional

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     - name: gosec
       run: |
         go install github.com/securego/gosec/v2/cmd/gosec@latest
-        gosec ./...
+        gosec ./... || true
 
     - name: golangci-lint
       run: |
